# build-pico

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  build-pico.sh
.github/workflows/: build-test.yml  test_RPi_Pico_WAV_Player.yaml  test_RPi_Pico_WAV_Player.yml  test_blink.yaml  test_blink.yml  test_pico_battery_op.yaml  test_pico_battery_op.yml  test_pico_level_meter.yaml  test_pico_level_meter.yml  test_pico_spdif_dac_hpamp.yaml  test_pico_spdif_dac_hpamp.yml  test_pico_spdif_recoder.yaml  test_pico_spdif_recoder.yml  test_pico_spdif_recorder.yml  workflow_build_all.yml
tests/blink/: CMakeLists.txt
